--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,35 @@
     <input type="checkbox" name="remember-me" /> </br>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
   </form>
-   Nếu bạn chưa có tài khoản hãy ấn vào <a th:href="@{/home/create_user}">đây</a> để đăng ký.
+   Nếu bạn chưa có tài khoản hãy ấn vào
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    đây
+    </button>
+    để đăng ký.
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel"> Đăng ký thành viên </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Bạn muốn đăng ký loại thành viên nào ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy </button>
+                <form th:action="@{/home/create_speakerform}" method="get">
+                    <input class="btn btn-primary" type="submit" value="Diễn giả"/>
+                </form>
+                <form th:action="@{/home/create_registerform}" method="get">
+                    <input class="btn btn-primary" type="submit" value="Thính giả"/>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
