--- a/src/main/resources/templates/admin/admin_home.html
+++ b/src/main/resources/templates/admin/admin_home.html
@@ -13,28 +13,7 @@
 <body>
     <h1>Event Management - Admin Home </h1>
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm bg-light">
-        <div class="container-fluid">
-            <!-- Links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/home}">Home </a> </br>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/your_events}">Your Events</a> </br>
-                </li>
-                <li class="nav-item">
-                    <h5 th:inline="text">Xin chào bạn !</h5>
-                </li>
-                <li class="nav-item">
-                    <form th:action="@{/logout}" method="post">
-                        <input  class="btn btn-outline-light text-dark" type="submit" value="Đăng xuất"/>
-                    </form>
-                </li>
-
-            </ul>
-        </div>
-    </nav>
+    <div th:insert="~{admin/header/admin_header :: admin_header}"></div>
 
     <form>
         <table class="table table-bordered" >
@@ -55,7 +34,6 @@
         </table>
     </form>
     <a th:href="@{/admin/create_event}">Tạo sự kiện</a>
-
 
 </body>
 </html>
