--- a/src/main/resources/templates/admin/admin_your_event.html
+++ b/src/main/resources/templates/admin/admin_your_event.html
@@ -13,27 +13,8 @@
 </head>
 <body>
     <h1>Event Management - Admin Your Event </h1>
-    <nav class="navbar navbar-expand-sm bg-light">
-        <div class="container-fluid">
-            <!-- Links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/home}">Home </a> </br>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/your_events}">Your Events</a> </br>
-                </li>
-                <li class="nav-item">
-                    <h5 th:inline="text">Xin chào bạn ! </h5>
-                </li>
-                <li class="nav-item">
-                    <form th:action="@{/logout}" method="post">
-                        <input class="btn btn-outline-light text-dark" type="submit" value="Đăng xuất"/>
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div th:insert="~{admin/header/admin_header :: admin_header}"></div>
+
         <table class="table table-bordered" >
             <thead>
             <tr>
@@ -52,13 +33,13 @@
                 <td>
                     <form th:action="@{'/admin/check_in/' + ${event.event_id}}" method="post" enctype="multipart/form-data">
                         <input type="file" name="file">
-                        <button id= "checkin "type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Check in</button>
+                        <button class="btn btn-info" id= "checkin "type="submit"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">Check in</button>
                     </form>
                 </td>
-                <td><a th:href="@{'/admin/event/' + ${event.event_id}}" >Chỉnh sửa thông tin </a></td>
+                <td><a class="btn btn-warning" th:href="@{'/admin/event/' + ${event.event_id}}" >Chỉnh sửa thông tin </a></td>
                 <td>
                     <form th:action="@{'/admin/delete_event/' + ${event.event_id}}" method="post">
-                        <input type="submit" value="Delete" />
+                        <input class="btn btn-danger" type="submit" value="Delete" />
                     </form>
                 </td>
             </tr>
