--- a/src/main/resources/templates/admin/admin_your_event.html
+++ b/src/main/resources/templates/admin/admin_your_event.html
@@ -28,8 +28,8 @@
             </thead>
             <tr th:each ="event : ${events}">
                 <td th:utext="${event.event_name}">...</td>
-                <td th:utext="${event.event_admin_id}">...</td>
-                <td th:utext="${event.event_speaker_id}">...</td>
+                <td th:utext="${event.event_admin.admin_name}">...</td>
+                <td th:utext="${event.event_speaker.speaker_name}">...</td>
                 <td>
                     <form th:action="@{'/admin/check_in/' + ${event.event_id}}" method="post" enctype="multipart/form-data">
                         <input type="file" name="file">
