--- a/src/main/resources/templates/create_register.html
+++ b/src/main/resources/templates/create_register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Event Management - Create Register</h1>
-<form th:action="@{/create_register}" th:object="${newregister}" method="POST" >
+<form class="w-50 p-3" margin="0 auto"  th:action="@{/create_register}" th:object="${newregister}" method="POST" >
 
     <div class="mb-3 mt-3">
         <label for="name" class="form-label">Name:</label>
